Gather sections and store into a map.

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,3 +1,9 @@
 body {
-    background: red;
+    background: #020204;
+}
+
+button {
+    border: 2px dashed #22b455;
+    background: #020204;
+    color: #22b455;
 }
