--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -142,6 +142,35 @@ table {
     --important: #b8001f;
 }
 
+.pop {
+    .container {
+        border: 5px solid green;
+        background: var(--background);
+        padding: 30px 20px;
+        max-width: 700px;
+        margin: 0 auto;
+
+        display: flex;
+        flex-flow: column nowrap;
+        align-items: center;
+    }
+}
+
+.backdrop,
+.click-backdrop {
+    box-sizing: border-box;
+    position: absolute;
+    top: 0;
+
+    background: rgba(15, 15, 15, 0.4);
+    height: 100%;
+    width: 100%;
+    padding: 30px 20px;
+    overflow-y: scroll;
+
+    margin: auto 0;
+}
+
 .instructions {
     img {
         width: 100%;
@@ -175,39 +204,16 @@ body {
         display: none;
     }
 
-    .container {
-        border: 5px solid green;
-        background: var(--background);
-        padding: 30px 20px;
-        max-width: 700px;
-        margin: 0 auto;
-
-        display: flex;
-        flex-flow: column nowrap;
-        align-items: center;
-    }
-
-    .backdrop,
-    .click-backdrop {
-        box-sizing: border-box;
-        position: absolute;
-        top: 0;
-
-        background: rgba(15, 15, 15, 0.4);
-        height: 100%;
-        width: 100%;
-        padding: 30px 20px;
-        overflow-y: scroll;
-
-        margin: auto 0;
-    }
-
     &.no-scroll {
         overflow-y: hidden;
     }
 
     & > * {
         margin-bottom: 40px;
+    }
+
+    a:hover {
+        text-decoration: none;
     }
 
     button {
@@ -227,13 +233,14 @@ footer {
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
+    gap: 5px;
     box-sizing: border-box;
     margin: 30px 0 20px 0;
 
     .github {
         display: flex;
         flex-flow: row nowrap;
-        align-items: center;
+        align-items: flex-end;
         gap: 5px;
     }
 
@@ -269,6 +276,9 @@ form {
             display: flex;
             flex-flow: column nowrap;
             gap: 5px;
+        }
+
+        &.dragHover {
         }
     }
 
