--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -323,6 +323,10 @@ form {
         }
     }
 
+    button {
+        background: var(--primary-color);
+    }
+
     input {
         height: 20px;
         padding: 5px;
