--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -274,6 +274,7 @@ body {
         font-family: Hind, sans-serif;
         font-weight: 600;
         font-size: var(--text-font-size);
+        transition: all 60ms;
     }
 }
 
@@ -325,6 +326,15 @@ form {
 
     button {
         background: var(--primary-color);
+        color: var(--background);
+        border: 2px solid var(--secondary-color);
+
+        &:hover {
+            cursor: pointer;
+            border: 2px solid var(--primary-color);
+            background: var(--background);
+            color: var(--primary-color);
+        }
     }
 
     input {
