--- a/src/style/loading-bar.css
+++ b/src/style/loading-bar.css
@@ -1,5 +1,8 @@
 .ldBar {
     position: relative;
+    width: 30%;
+    height: 30%;
+    margin: 10px 0 30px 0;
 }
 
 .ldBar.label-center>.ldBar-label {
@@ -18,4 +21,16 @@
 
 .ldBar.no-percent .ldBar-label:after {
     content: "";
+}
+
+.ldBar path.mainline {
+    stroke-width: 10;
+    stroke: #09f;
+    stroke-linecap: round;
+}
+
+.ldBar path.baseline {
+    stroke-width: 14;
+    stroke: #f1f2f3;
+    stroke-linecap: round;
 }
